--- a/styles/position-page.css
+++ b/styles/position-page.css
@@ -1,1 +1,15 @@
+nav{
+	padding-left: 60px;
+	padding-right: 60px;
+	text-align: right;
+	position: relative;
+}
 
+.logo{
+	position: absolute;
+	left: 20px;
+}
+
+li{
+	display: inline-block;
+}
