nav close to done

--- a/styles/position-page.css
+++ b/styles/position-page.css
@@ -1,15 +1,20 @@
+*{
+	box-sizing: border-box;
+}
 nav{
 	padding-left: 60px;
 	padding-right: 60px;
-	text-align: right;
-	position: relative;
+	background-color: grey;
+	position: fixed;
+	width: 100%;
+	height: 50px;
 }
 
-.logo{
-	position: absolute;
-	left: 20px;
+img{
+	height: 80px;
 }
 
-li{
+img, ul, li{
 	display: inline-block;
+	vertical-align: middle;
 }
