--- a/styles/position-page.css
+++ b/styles/position-page.css
@@ -1,20 +1,59 @@
 *{
 	box-sizing: border-box;
 }
+
+body {
+	background-image: url(../images/outerspace_landscape.jpeg);
+	background-size: cover;
+	min-width: 1000px;
+
+
+}
 nav{
 	padding-left: 60px;
 	padding-right: 60px;
 	background-color: grey;
 	position: fixed;
+	top: 0;
 	width: 100%;
+	height: 60px;
+}
+
+.logo{
 	height: 50px;
+	border-radius: 30px;
+	border: 1px black solid;
+	margin-top: 5px;
+	margin-bottom: 5px;
 }
 
-img{
-	height: 80px;
-}
-
-img, ul, li{
+.logo, ul, li{
 	display: inline-block;
 	vertical-align: middle;
 }
+
+main{
+	height: 300px;
+	width: 600px;
+	margin-top: 300px;
+	margin-left: auto;
+	margin-right: auto;
+	border: 10px green dotted;
+	position: relative;
+}
+
+.space{
+	width: 200px;
+	position: absolute;
+}
+
+.dog{
+	right: -100px;
+	bottom: -100px;
+}
+
+.cat{
+	top: -100px;
+	left: -100px;
+}
+
