--- a/styles/float-page.css
+++ b/styles/float-page.css
@@ -10,3 +10,19 @@ main {
   margin-left: auto;
   margin-right: auto;
 }
+
+.nebula1{
+	float: left;
+	width: 250px;
+	margin-top: 10px;
+	margin-right: 10px;
+	margin-bottom: 10px;
+}
+
+.nebula2{
+	float: right;
+	width: 250px;
+	margin-top: 10px;
+	margin-left: 10px;
+	margin-bottom: 10px;
+}
